# gen/restapi/operations/users/get_user_by_username_responses.go
@@ -1,0 +1,118 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package users
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"auth-api-example/gen/models"
+)
+
+// GetUserByUsernameOKCode is the HTTP code returned for type GetUserByUsernameOK
+const GetUserByUsernameOKCode int = 200
+
+/*
+GetUserByUsernameOK successful operation
+
+swagger:response getUserByUsernameOK
+*/
+type GetUserByUsernameOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.UserResponse `json:"body,omitempty"`
+}
+
+// NewGetUserByUsernameOK creates GetUserByUsernameOK with default headers values
+func NewGetUserByUsernameOK() *GetUserByUsernameOK {
+
+	return &GetUserByUsernameOK{}
+}
+
+// WithPayload adds the payload to the get user by username o k response
+func (o *GetUserByUsernameOK) WithPayload(payload *models.UserResponse) *GetUserByUsernameOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get user by username o k response
+func (o *GetUserByUsernameOK) SetPayload(payload *models.UserResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetUserByUsernameOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*
+GetUserByUsernameDefault generic error response
+
+swagger:response getUserByUsernameDefault
+*/
+type GetUserByUsernameDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Default `json:"body,omitempty"`
+}
+
+// NewGetUserByUsernameDefault creates GetUserByUsernameDefault with default headers values
+func NewGetUserByUsernameDefault(code int) *GetUserByUsernameDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetUserByUsernameDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get user by username default response
+func (o *GetUserByUsernameDefault) WithStatusCode(code int) *GetUserByUsernameDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get user by username default response
+func (o *GetUserByUsernameDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get user by username default response
+func (o *GetUserByUsernameDefault) WithPayload(payload *models.Default) *GetUserByUsernameDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get user by username default response
+func (o *GetUserByUsernameDefault) SetPayload(payload *models.Default) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetUserByUsernameDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
